--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,9 +48,7 @@ layout: default
         </div>
     </div>
 
-    <div class="sidenav" id="menuIndex"></div>
-
-    <!--div class="sidenav">
+    <div class="sidenav">
         <h2>Blog</h2>
         <ul class="artical-list">
         {% for post in site.categories.blog%}
@@ -71,7 +69,9 @@ layout: default
             <li><a href="{{ post.url }}">{{ post.title }}</a></li>
         {% endfor %}
         </ul>
-    </div-->
+    </div>
+
+    <div class="sidenav" id="menuIndex"></div>
 </div>
 
 <script src="/js/post.js" type="text/javascript"></script>
